--- a/tranquil-client/package.json
+++ b/tranquil-client/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.0.1",
+    "@dicebear/core": "^9.0.1",
     "@iconify/react": "^5.0.1",
+    "@tabler/icons-react": "^3.11.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
