--- a/tranquil-server/.env
+++ b/tranquil-server/.env
@@ -1,3 +1,6 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/tranquil
 CLIENT_URL=http://localhost:5173
+
+JWT_SECRET=secret
+JWT_REFRESH_TOKEN_SECRET=refreshsecret
